--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ nav .nav .main-nav:hover a {
      overflow: hidden;
 
 }
-.products .box img ,.news .box img {
+.products .box img {
     width: 100%;
     height: 100%;
 }
@@ -531,6 +531,10 @@ del {
     width: 25%;
     height: 400px;
 }
+.news .box img {
+    width: 100%;
+    height: 82%;
+}
 .news .text {
     line-height: 30px;
 }
@@ -596,7 +600,7 @@ del {
     margin: 20px 0;
 }
 footer {
-    height: 70vh;
+    height: 80vh;
     background-color: #522f29;
     padding: 30px 100px;
     color: #faf3ed;
